# afids-xvd

./: Makefile.am  Makefile.in  README  README_RPM  aclocal.m4  afids-xvd.spec  afids_xvd.am  configure  configure.ac
axvd/: axvd.am
axvd/src/: CursorLatLonView.cc  ImageDataWrapper.cc  ImageWindow.cc  VicarImageData.cc  VicarImageData.h  VicarImageFile.cc  VicarImageFile.h  XVd.xres  mp_routines.h  notes
gui/: gui.am
gui/src/: AxisCmd.cc  AxisCmd.h  BasicImageView.h  BasicWedgeOverlay.h  BasicWedgeView.h  BorderCmd.cc  BorderCmd.h  ClearLabelCmd.cc  ClearLabelCmd.h  ClearMarksCmd.cc  ClearMarksCmd.h  CollectHistBG.cc  ColorMapCmd.cc  ColorMapCmd.h  CurListValue.cc  CurListValue.h  CursorBasicView.cc  CursorBasicView.h  CursorColorController.cc  CursorDisplayer.cc  CursorDnView.cc  CursorDnView.h  CursorLatLonView.cc  CursorLatLonView.h  CursorModel.cc  CursorPositionView.cc  CursorPositionView.h  DataRangeAutoCmd.cc  DataRangeAutoCmd.h  DataRangeDialog.cc  DataRangeDialog.h  DataRangeValueCmd.cc  DataRangeValueCmd.h  DitherCmd.cc  DitherCmd.h  DnValueView.cc  DnValueView.h  FileSelBox.cc  FileSelBox.h  FileSelWindow.cc  (+406 more)
gui/xresource/: XVd.xres  XVd_blink.xres  xvd_save_script
motif_app/: motif_app.am
motif_app/src/: Application.cc  Application.h  AskFirstCmd.cc  AskFirstCmd.h  BasicComponent.cc  ButtonInterface.cc  ButtonInterface.h  CallbackCompressor.cc  CheckBoxInterface.cc  CheckBoxInterface.h  Clock.cc  CloseCmd.h  Cmd.cc  Cmd.h  CmdInterface.cc  CmdInterface.h  CmdList.cc  CmdList.h  ColorChooser.cc  ColorChooser.h  CustomDialog.cc  CustomDialog.h  DialogManager.cc  DialogManager.h  ErrorData.cc  ErrorDialogManager.cc  ErrorDialogManager.h  ErrorManager.cc  ErrorManager.h  HSVView.cc  HSVView.h  HelpBrowser.cc  HelpBrowser.h  HelpOnContextCmd.cc  HelpOnContextCmd.h  HelpSelfCmd.cc  HelpSelfCmd.h  InfoDialogManager.cc  InterruptibleCmd.cc  InterruptibleCmd.h  (+53 more)
script/: setup_afids_xvd.csh.in  setup_afids_xvd.sh.in  xvd.in
vicar_motif/: vicar_motif.am
vicar_motif/src/: DrawObject.cc  DrawObject.h  DspApplication.cc  DspApplication.h  DspAxisBasicView.cc  DspAxisBasicView.h  DspAxisHorizView.cc  DspAxisHorizView.h  DspAxisVertView.cc  DspAxisVertView.h  DspBarBasicView.cc  DspBarBasicView.h  DspBarHorizView.cc  DspBarHorizView.h  DspBarVertView.cc  DspBarVertView.h  DspCurs2ImageGlue.h  DspCursBox.h  DspCursCmd.h  DspCursDump.h  DspCursDumpCmd.h  DspCursWindow.h  DspCursorView.h  DspDataNimBasicGll.h  DspDataNimEngRB.h  DspDataPwsGll.h  DspDefs.h  DspDisplayPolicy.cc  DspDisplayPolicy.h  DspFile.cc  DspFile.h  DspFileNameCmd.cc  DspFileNameCmd.h  DspHistBasic.cc  DspHistBasic.h  DspHistInput.h  DspHistInputPlain.h  DspHistMean.h  DspHistOutput.h  DspHistPlain.cc  (+195 more)
